# cocpy

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  python-publish.yml
examples/: show_player_and_clan.py
src/: test_client.py
src/cocpy/: __init__.py  client.py  errors.py
tests/: conftest.py  test_live.py  test_unit_client.py
